fix inconsistencies in WYSIWYG paragraph spacing

--- a/app/assets/stylesheets/sumofus/global/typography.scss
+++ b/app/assets/stylesheets/sumofus/global/typography.scss
@@ -80,4 +80,12 @@ a {
   p, span, div {
     line-height: 1.6em;
   }
+  p {
+    margin-bottom: 18px;
+  }
+  p+br {
+    // don't display <br> tags that follow
+    // immediately on <p> tags, cause they have margin
+    display: none
+  }
 }
